test/interaction/Issue1244a.out
(agda2-status-action "")
(agda2-info-action "*Type-checking*" "" nil)
(agda2-highlight-clear)
(agda2-info-action "*Error*" "Issue1244a.agda:5.9-10: error: [NotInScope] Not in scope: b at Issue1244a.agda:5.9-10 when scope checking b" nil)
((last . 3) . (agda2-maybe-goto '("Issue1244a.agda" . 82)))
(agda2-highlight-load-and-delete-action)
(agda2-status-action "")
(agda2-status-action "")
(agda2-info-action "*Agda Version*" "Agda version «Agda-version»" nil)
