test/interaction/Issue1244a.agda
-- Testing the version option on a file with errors.
--

foo : Set → Set
foo a = b
